tests/error/subtractInteger-wrong-1st-argument-list-integer-.uplc
(program 1.0.0[[(builtin subtractInteger)(con list(integer) [42, 10, 53])](con integer 10)])